--- a/style.css
+++ b/style.css
@@ -29,8 +29,16 @@ header {
 }
 
 .card  {
-    background-color: lightcoral;
+    background-color: whitesmoke;
+    border: solid 2px black;
+    word-wrap: break-word;
     padding-left: 1rem;
+    padding-right: 1rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 1rem;
 }
 
 form {
@@ -47,4 +55,25 @@ form {
 }
 .hidden {
     visibility: hidden;
+}
+
+.active {
+    background-color: lightgrey;
+}
+
+p {
+    padding-top: 0;
+    margin: 0;
+}
+.bold {
+    font-weight: bold;
+}
+
+.notread {
+    border: solid 1px black;
+    background-color: #ffcccb;
+}
+
+.read {
+    background-color: #90EE90;
 }
