--- a/style.css
+++ b/style.css
@@ -1,79 +1,84 @@
-
 .main {
-    display: grid;
-    grid-template-rows: repeat(auto-fit,1fr);
-    gap: 20px;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 20px;
 }
 header {
-    display: flex;
-    gap: 50px;
-    justify-content: right;
-    align-items: center;
+  display: flex;
+  gap: 50px;
+  justify-content: right;
+  align-items: center;
 }
 .library {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(120px,1fr));
-    grid-auto-rows: 175px;
-    gap: 10px;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-auto-rows: 175px;
+  gap: 10px;
 }
 .toggle {
-    background-color: lightgray;
-    border: none;
-    border-radius: 10px;
+  background-color: lightgray;
+  border: none;
+  border-radius: 10px;
 }
 
 .toggle:hover {
-    background-color: lightblue;
+  background-color: lightblue;
 }
 
-.card  {
-    background-color: whitesmoke;
-    border: solid 2px black;
-    word-wrap: break-word;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding-top: 1rem;
+.card {
+  background-color: whitesmoke;
+  border: solid 2px black;
+  word-wrap: break-word;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-top: 1rem;
 }
 
 form {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-    flex-direction: column;
-    padding: 10%;
-    background-color: white;
-    border: dashed .1rem black;
-    gap: 1rem;
-}
-.hidden {
-    visibility: hidden;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  padding: 10%;
+  background-color: white;
+  border: dashed 0.1rem black;
+  gap: 1rem;
 }
 
+.subcan {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* .hidden {
+    visibility: hidden;
+} */
+
 .active {
-    background-color: lightgrey;
+  background-color: lightgrey;
 }
 
 p {
-    padding-top: 0;
-    margin: 0;
+  padding-top: 0;
+  margin: 0;
 }
 .bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .notread {
-    border: solid 1px black;
-    background-color: #ffcccb;
+  border: solid 1px black;
+  background-color: #ffcccb;
 }
 
 .read {
-    background-color: #90EE90;
+  background-color: #90ee90;
 }
