--- a/style.css
+++ b/style.css
@@ -15,16 +15,8 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   grid-auto-rows: 175px;
-  gap: 10px;
-}
-.toggle {
-  background-color: lightgray;
-  border: none;
-  border-radius: 10px;
-}
-
-.toggle:hover {
-  background-color: lightblue;
+  row-gap: 100px;
+  gap: 3rem;
 }
 
 .card {
@@ -35,11 +27,18 @@ header {
   padding-right: 1rem;
   height: 100%;
   display: flex;
+  flex-shrink: 1;
   flex-direction: column;
-  gap: 1rem;
-  padding-top: 1rem;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.readmarker {
+  height: 100%;
+}
 form {
   position: absolute;
   left: 50%;
@@ -58,10 +57,6 @@ form {
   justify-content: space-between;
 }
 
-/* .hidden {
-    visibility: hidden;
-} */
-
 .active {
   background-color: lightgrey;
 }
@@ -74,11 +69,6 @@ p {
   font-weight: bold;
 }
 
-.notread {
-  border: solid 1px black;
+.nonread {
   background-color: #ffcccb;
-}
-
-.read {
-  background-color: #90ee90;
 }
